# provider-pact-example

./: .coveragerc  .env  .env.example  .flaskenv  .gitattributes  .gitignore  .pylintrc  .redocly.yaml  .spectral.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.rst  SECURITY.rst  default.mk  package-lock.json  package.json  products.json  redocly.yaml  requirements.txt  runner.py  server.py  setup.cfg  setup.py  specmatic-test.bat  specmatic-test.ps1  specmatic.json  verify-contracts.sh
.github/: dependabot.yml  labeler.yml
.github/workflows/: build.yaml  codeql-analysis.yaml  contracts.yaml  labeler.yaml  labeler.yml  lint-code.yaml  lint-oas.yaml  lint.yaml  main.yaml  security.yml  test-code.yaml  test-contracts.yaml  versions.yaml
consumer/: .coveragerc  .pylintrc  Makefile  default.mk  setup.py
consumer/products/: __init__.py  product.py
consumer/requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
contracts/: documentation.yaml  foo-api.yaml  products.spec  specmatic-pattern-issue.spec
contracts/contracts_data/: products.json
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 3602afd0b965_create_brands_table.py  4daadf48a442_.py  53230d4207d2_.py  95ede4d5672e_add_auditmixin_and_identitymixin.py  9c4ffb14d5fd_.py  de4bd2b27205_.py
openapi/: provider.spec  swagger.yaml
products/: __init__.py  app.py  config.py  exceptions.py  models.py  seeder.py  utils.py
products/api/: __init__.py  errors.py  product.py  products.py
products/decorators/: __init__.py  caching.py  json.py  paginate.py
products/main/: __init__.py  views.py
provider/: .coveragerc  .env.example  Makefile  __init__.py  app.py  config.py  default.mk  exceptions.py  fake.py  models.py  runner.py  seeder.py  setup.py  utils.py
provider/api/: __init__.py  errors.py  products.py  schemas.py
provider/decorators/: __init__.py  caching.py  json.py  paginate.py
provider/main/: __init__.py  errors.py  views.py
provider/migrations/: script.py.mako
provider/migrations/versions/: 3602afd0b965_create_brands_table.py  9c4ffb14d5fd_.py
provider/products/: app.py  exceptions.py
provider/products/api/: __init__.py  errors.py  products.py
provider/products/decorators/: json.py
provider/requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
provider/tests/: test_paginate.py  test_utils.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/products/: .flaskenv  app.py  products.json
tests/: __init__.py  app.py  conftest.py  factories.py  pact_tools.py  run-pytest.sh  test_clients.py  test_contracts.py  test_paginate.py  test_products.py  test_utils.py
