# This file is part of the Provider API Example.
#
# Copyright (C) 2023 Serghei Iakovlev <egrep@protonmail.ch>
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

[metadata]
license_files = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose

[flake8]
# Base flake8 configuration:
statistics = True
show-source = True

# Plugins:
max-complexity = 10
application-import-names = provider,tests
import-order-style = smarkets

# Excluding some directories:
extend-exclude =
    .venv,
    build*,
